--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
+    <main>
+        <div id="card_body" class="todo_card_body">
+
+            <div id="card_body_nav" class="todo_card_body_nav">
+                <h1 class="card_name">TODO</h1>
+                <button class="card_body_menu_button">...</button>
+            </div>
+
+            <div class="card_body_content">
+                <div class="tasks_todo">
+                </div>
+            </div>
+
+            <div class="card_body_add_button">
+                <button>+ Add another card</button>
+            </div>
+
+        </div>
+
+        <div id="card_body" class="in_progress_card_body">
+
+            <div id="card_body_nav" class="inprogress_card_body_nav">
+                <h2 class="card_name">IN PROGRESS</h2>
+                <button class="card_body_menu_button">...</button>
+            </div>
+
+            <div class="card_body_content">
+                <div class="tasks_in_progress">
+                </div>
+            </div>
+
+            <div class="card_body_add_button">
+                <button>+ Add another card</button>
+            </div>
+
+        </div>
+
+        <div id="card_body" class="done_card_body">
+
+            <div id="card_body_nav" class="done_card_body_nav">
+                <h3 class="card_name">DONE</h3>
+                <button class="card_body_menu_button">...</button>
+            </div>
+
+            <div class="card_body_content">
+                <div class="tasks_done">
+                </div>
+            </div>
+
+            <div class="card_body_add_button">
+                <button>+ Add another card</button>
+            </div>
+
+        </div>
+    </main>
 </body>
 
 </html>
