--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,9 @@
             </div>
 
             <div class="card_body_content">
-                <div class="tasks_todo">
-                </div>
+                
             </div>
-
-            <div class="card_body_add_button">
-                <button>+ Add another card</button>
-            </div>
+            <button class="add_tiket">+ Add another card</button>
 
         </div>
 
@@ -39,13 +35,9 @@
             </div>
 
             <div class="card_body_content">
-                <div class="tasks_in_progress">
-                </div>
-            </div>
 
-            <div class="card_body_add_button">
-                <button>+ Add another card</button>
             </div>
+                <button class="add_tiket">+ Add another card</button>
 
         </div>
 
@@ -57,16 +49,12 @@
             </div>
 
             <div class="card_body_content">
-                <div class="tasks_done">
-                </div>
-            </div>
 
-            <div class="card_body_add_button">
-                <button>+ Add another card</button>
             </div>
-
-        </div>
+                <button class="add_tiket">+ Add another card</button>
     </main>
 </body>
 
 </html>
+
+<!-- <button class="task_del_button"> + </button> -->
