--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -53,6 +54,8 @@
             </div>
                 <button class="add_tiket">+ Add another card</button>
     </main>
+    <script src="js/app.js"></script>
+    <script src="js/app.complete.js"></script>
 </body>
 
 </html>
