--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,7 @@
             </div>
                 <button class="add_tiket">+ Add another card</button>
     </main>
-    <script src="js/app.js"></script>
-    <script src="js/app.complete.js"></script>
+    <script src="../dist/main.js"></script>
 </body>
 
 </html>
-
-<!-- <button class="task_del_button"> + </button> -->
